<resources>
    <string name="app_name">Contacts Book</string>

    <!-- Hints -->
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="contacts_image">Contacts Image</string>
    <string name="organization">Organization</string>

    <!-- Buttons -->
    <string name="add_new_contact"> + Add A New Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="add_contact">Save This Contact</string>
    <string name="update_contact">Update This Contact</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="Save_Button_Text">Add Contact</string>
    <string name="Save_Button_Update_Text">Update Contact</string>
</resources>
