<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp"
              tools:context=".MainActivity"
              android:background="@android:color/background_light">

    <!-- First Name EditText -->
    <EditText android:id="@+id/fname_txt"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/first_name"
              android:inputType="textPersonName"
              android:text=""
              android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
              android:autofillHints=""/>

    <!-- Last Name EditText -->
    <EditText android:id="@+id/lname_txt"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/last_name"
              android:inputType="textPersonName"
              android:text=""
              android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
              android:autofillHints=""/>

    <!-- Phone EditText -->
    <EditText android:id="@+id/phone_txt"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/phone_number"
              android:inputType="phone"
              android:maxLength="10"
              android:text=""
              android:autofillHints=""/>

    <!-- Email EditText -->
    <EditText android:id="@+id/email_txt"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/email"
              android:inputType="textEmailAddress"
              android:text=""
              android:autofillHints=""/>

    <!-- Organization EditText -->
    <EditText android:id="@+id/organization_txt"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/organization"
              android:inputType="text"
              android:text=""
              android:autofillHints=""/>

    <!-- Linear Layout to Hold Save Button and Delete Button -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/phone_number"
                  android:gravity="center"
                  android:orientation="horizontal"
                  android:layout_marginTop="25dp">

        <!-- Save Contact Button -->
        <Button android:id="@+id/save_btn"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/add_contact"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:drawableStart="@android:drawable/ic_menu_save"
                android:contentDescription="@string/add_contact"
                android:background="#008080"
                android:textColor="#FFFFFF"
                style="?android:attr/buttonBarButtonStyle"
                android:maxWidth="500dp"/>

        <!-- Delete Contact Button -->
        <Button android:id="@+id/delete_btn"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/delete_contact"
                android:textSize="16sp"
                android:drawableStart="@android:drawable/ic_menu_delete"
                android:background="#990000"
                android:textColor="@android:color/background_light"
                android:padding="10sp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="6dp"
                android:maxWidth="500dp"/>

    </LinearLayout> <!-- End Linear Layout -->

    <!-- Contacts Image -->
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/contacts"
            android:id="@+id/imgContacts"
            android:contentDescription="@string/contacts_image"
            android:layout_marginTop="25dp"/>

</LinearLayout>